Updated some comments