@@ -1,14 +1,13 @@
 package com.phish_patrol.service;
 
-import com.phish_patrol.repository.UserRepository;
 import com.phish_patrol.model.User;
-import org.springframework.security.core.userdetails.UserDetails;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.core.userdetails.UsernameNotFoundException;
-import org.springframework.stereotype.Service;
+import com.phish_patrol.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.userdetails.*;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -18,16 +17,13 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        // 1. Fetch the user from MongoDB
         User user = userRepository.findByUsername(username)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
+            .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
-        // 2. Map your application User model to the Spring Security UserDetails model
-        //    We must use the passwordHash field from your MongoDB User object.
         return new org.springframework.security.core.userdetails.User(
-                user.getUsername(),
-                user.getPasswordHash(), // This is the hashed password from MongoDB
-                Collections.emptyList() // We are using an empty list for authorities/roles
+            user.getUsername(),
+            user.getPasswordHash(),
+            List.of(new SimpleGrantedAuthority("ROLE_USER"))
         );
     }
 }
